<resources>
    <string name="app_name">Desafio4DHA</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="log_in">log in</string>
    <string name="remember">Remember</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="gamepic">gamepic</string>
    <string name="save_game">Save Game</string>
    <string name="description">Description</string>
    <string name="created_at">Created at</string>
    <string name="descri_o_do_jogo">Descrição do jogo</string>
</resources>