<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.view.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/kratos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_8_dp"
        app:cardCornerRadius="@dimen/dim_8_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                android:layout_marginTop="@dimen/dim_24_dp"
                android:hint="@string/email"
                android:textColorHint="@color/colorGrayText"
                app:boxStrokeColor="@color/colorGrayText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorGrayText"
                app:boxStrokeColor="@color/colorGrayText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbPersist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dim_9_dp"
                android:layout_marginTop="@dimen/dim_8_dp"
                android:buttonTint="@color/colorPink"
                android:text="@string/remember"
                android:textColor="@color/colorCheckBoxText"
                android:textSize="@dimen/dim_16_sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                android:layout_marginTop="@dimen/dim_32_dp"
                android:backgroundTint="@color/colorPink"
                android:text="@string/log_in"
                android:textSize="@dimen/dim_16_sp" />

            <TextView
                android:id="@+id/txtCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_8_dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/dim_16_dp"
                android:text="@string/create_account"
                android:textColor="@color/colorBlueText"
                android:textSize="@dimen/dim_16_sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>