<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.view.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/kratos" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/dim_8_dp"
        app:cardCornerRadius="@dimen/dim_8_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/colorGrayText"
                app:boxStrokeColor="@color/colorGrayText"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                android:layout_marginTop="@dimen/dim_8_dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorPrimary"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/colorGrayText"
                app:boxStrokeColor="@color/colorGrayText"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfPassRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/colorGrayText"
                app:boxStrokeColor="@color/colorGrayText"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfRptPassRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:textColorHint="@color/colorGrayText"
                app:boxStrokeColor="@color/colorGrayText"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRptPassRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/create_account"
                android:textSize="@dimen/dim_16_sp"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                android:layout_marginTop="@dimen/dim_32_dp"
                android:layout_marginBottom="@dimen/dim_16_dp"
                android:backgroundTint="@color/colorPink"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>