<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.view.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/kratos" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/dim_8_dp"
        app:cardCornerRadius="@dimen/dim_8_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfGameName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/colorGrayText"
                app:boxStrokeColor="@color/colorGrayText"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                android:layout_marginTop="64dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGameName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorPrimary"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfGameYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/created_at"
                android:textColorHint="@color/colorGrayText"
                app:boxStrokeColor="@color/colorGrayText"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGameYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorPrimary"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfGameDesc"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:hint="@string/description"
                android:textColorHint="@color/colorGrayText"
                app:boxStrokeColor="@color/colorGrayText"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGameDesc"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@color/colorWhite"
                    android:textColor="@color/colorPrimary"
                    android:inputType="text"
                    android:layout_gravity="top"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/save_game"
                android:textSize="@dimen/dim_16_sp"
                android:layout_marginHorizontal="@dimen/dim_16_dp"
                android:layout_marginTop="@dimen/dim_32_dp"
                android:layout_marginBottom="@dimen/dim_16_dp"
                android:backgroundTint="@color/colorPink"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/imgCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardLogin"
        app:layout_constraintEnd_toEndOf="@+id/cardLogin"
        app:layout_constraintStart_toStartOf="@+id/cardLogin"
        app:layout_constraintTop_toTopOf="@+id/cardLogin"
        android:minWidth="@dimen/dim_130_dp"
        android:minHeight="@dimen/dim_130_dp"
        android:elevation="@dimen/dim_4_dp"
        app:srcCompat="@drawable/circle"
        app:tint="@color/colorPink" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/dim_45_dp"
        android:layout_height="@dimen/dim_45_dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgCircle"
        app:layout_constraintEnd_toEndOf="@+id/imgCircle"
        app:layout_constraintStart_toStartOf="@+id/imgCircle"
        app:layout_constraintTop_toTopOf="@+id/imgCircle"
        android:elevation="@dimen/dim_5_dp"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

</androidx.constraintlayout.widget.ConstraintLayout>